--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.crediqure"> <!-- Change to your actual package name -->
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.crediqure"> <!-- Change to your actual package name -->
     <!-- Internet permission (must be at the root level) -->
     <uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <!-- Required for querying text processing activities -->
     <queries>
@@ -15,7 +15,9 @@
     <application
         android:label="crediqure"
         android:icon="@mipmap/ic_launcher">
-
+    <meta-data
+    android:name="com.google.android.geo.API_KEY"
+    android:value="YOUR_GOOGLE_MAPS_API_KEY"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
